// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea must return the diff between snapshot when TextArea has a disable vs enable autocomplete 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -11,11 +11,11 @@
      className="sc-1ln9y8s-4 gXgjdc"
    >
      <BasicTextAreaStyle
        aria-required={false}
        async={true}
-       autoComplete="off"
+       autoComplete="on"
        id="bar"
        maxRows={25}
        name="bar"
        onChange={[Function handleChange]}
        required={false}
`;

exports[`TextArea must return the diff between snapshot when TextArea has a enable vs disable spellchecking 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -18,11 +18,11 @@
        maxRows={25}
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
-       spellCheck={true}
+       spellCheck={false}
        value="baz"
      />
      <label
        className="sc-1ln9y8s-9 ewUCsT"
        htmlFor="bar"
`;

exports[`TextArea must return the diff between snapshot when TextArea has a limit of characters or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -13,11 +13,13 @@
      <BasicTextAreaStyle
        aria-required={false}
        async={true}
        autoComplete="off"
        id="bar"
+       maxLength="450"
        maxRows={25}
+       minLength="25"
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
        spellCheck={true}
@@ -27,7 +29,10 @@
        className="sc-1ln9y8s-9 ewUCsT"
        htmlFor="bar"
      >
        qux
      </label>
+     <TextAreaCounterStyle>
+       3/450
+     </TextAreaCounterStyle>
    </div>
  </div>
`;

exports[`TextArea must return the diff between snapshot when TextArea is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,18 +9,18 @@
    </span>
    <div
      className="sc-1ln9y8s-4 gXgjdc"
    >
      <BasicTextAreaStyle
-       aria-required={true}
+       aria-required={false}
        async={true}
        autoComplete="off"
        id="bar"
        maxRows={25}
        name="bar"
        onChange={[Function handleChange]}
-       required={true}
+       required={false}
        rows={5}
        spellCheck={true}
        value="baz"
      />
      <label
`;
